--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -8,9 +8,18 @@ $box-padding-default-top-bottom: 10px;
 $box-padding-default-left-right: 30px;
 
 body {
+    height: 100%;
     font-size: 14px;
     background: #f5f7fa;
     font-family: "Helvetica Neue",Helvetica,"PingFang SC","Hiragino Sans GB","Microsoft YaHei","微软雅黑",Arial,sans-serif;
+}
+
+#app {
+    height: 100%;
+
+    & >.el-container {
+        height: 100%;
+    }
 }
 
 a {
@@ -57,10 +66,12 @@ a {
 
 .em-el-container {
     margin: 1rem;
+    min-height: 30rem;
 }
 
 .em-header {
-    background: $parimy-color;
+    // background: $parimy-color;
+    background: #fff;
 }
 
 .em-login-page {
@@ -71,7 +82,7 @@ a {
     width: 100%;
     height: 100%;
     color: #fff;
-    background-image: linear-gradient(75deg, $parimy-color 20%, $secondary-color 80%);
+    background: #fff;
 }
 
 .em-box {
