更新首页的样式

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -94,7 +94,7 @@ a {
 }
 
 .em-box {
-    margin: 1rem;
+    margin: 5px;
     box-shadow: 0 1px 5px #E2E4E6;
     background-color: $default-background-color;
     border-radius: 6px;
