添加与完善部分组件

--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -1,4 +1,5 @@
 @import url("http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css");
+@import url("https://cdn.bootcss.com/normalize/8.0.0/normalize.min.css");
 
 $parimy-color: rgb(94, 96, 235);
 $secondary-color: #50d2d2;
